deleted:    README.md 	modified:   next.config.ts 	deleted:    package-lock.json 	modified:   package.json 	new file:   public/currency/btc.png 	new file:   public/currency/dollar.png 	new file:   public/currency/eth.png 	new file:   public/currency/euro.png 	deleted:    public/file.svg 	deleted:    public/globe.svg 	new file:   public/icons/INR.png 	new file:   public/icons/USD.png 	new file:   public/icons/arrow.svg 	new file:   public/icons/be.svg 	new file:   public/icons/cfw.svg 	new file:   public/icons/chak.svg 	new file:   public/icons/ef.svg 	new file:   public/icons/email.svg 	new file:   public/icons/gps.svg 	new file:   public/icons/green-tick.svg 	new file:   public/icons/hos.svg 	new file:   public/icons/icon1.svg 	new file:   public/icons/icon2.svg 	new file:   public/icons/lam.svg 	new file:   public/icons/mpf.svg 	new file:   public/icons/phone.svg 	new file:   public/icons/ps.svg 	new file:   public/icons/saak.svg 	new file:   public/icons/sae.svg 	new file:   public/icons/sfmf.svg 	new file:   public/logo.png 	deleted:    public/next.svg 	new file:   public/objects/Object1.svg 	new file:   public/objects/Object2.svg 	new file:   public/objects/Object3.svg 	deleted:    public/vercel.svg 	new file:   public/web-app-manifest-192x192.png 	new file:   public/web-app-manifest-512x512.png 	deleted:    public/window.svg 	new file:   src/app/apple-icon.png 	modified:   src/app/favicon.ico 	modified:   src/app/globals.css 	new file:   src/app/icon0.svg 	new file:   src/app/icon1.png 	modified:   src/app/layout.tsx 	new file:   src/app/manifest.json 	modified:   src/app/page.tsx 	new file:   src/components/footer/Footer.tsx 	new file:   src/components/mainPage/HeroSection.tsx 	new file:   src/components/mainPage/OurProducts.tsx 	new file:   src/components/mainPage/UseCases.tsx 	new file:   src/components/navbar/Links.tsx 	new file:   src/components/navbar/Navbar.tsx 	new file:   src/utils/utils.ts 	new file:   yarn.lock

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,42 @@
-@import "tailwindcss";
+@import 'tailwindcss';
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+@theme {
+	--color-green-60: #caff33;
+	--color-green-65: #d1ff4c;
+	--color-green-70: #d8ff66;
+	--color-green-80: #e5ff99;
+	--color-green-90: #f2ffcc;
+	--color-green-95: #f8ffe5;
+	--color-green-97: #fbfff0;
+	--color-green-99: #fefffa;
+
+	--color-white-90: #e4e4e7;
+	--color-white-95: #f1f1f3;
+	--color-white-97: #f7f7f8;
+	--color-white-99: #fcfcfd;
+
+	--color-gray-10: #191919;
+	--color-gray-11: #1c1c1c;
+	--color-gray-15: #262626;
+	--color-gray-20: #333333;
+	--color-gray-30: #4c4c4d;
+	--color-gray-35: #59595a;
+	--color-gray-40: #656567;
+	--color-gray-60: #98989a;
+	--color-gray-70: #b3b3b3;
+	--color-gray-75: #bfbfbf;
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+html {
+	@apply text-white;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+.transactions {
+	background: var(--color-gray-11);
+	border: 0.87px solid var(--color-gray-15);
 }
 
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+img {
+	width: auto;
+	height: auto;
 }
